fix layout issue in Mis-trabajos

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -26,7 +26,9 @@ p {
   background-size: cover;
   background-position: center;
 }
-
+.card-para {
+  font-size: 15px;
+}
 /* Contacto */
 
 #Contacto form label {
